created variables in app

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/sadielinks/team-profile-gen#readme",
   "dependencies": {
+    "fs": "0.0.1-security",
     "inquirer": "^8.1.5"
   }
 }
