--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "dependencies": {
     "fs": "0.0.1-security",
     "inquirer": "^8.1.5"
+  },
+  "devDependencies": {
+    "jest": "^27.2.4"
   }
 }
