--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "homepage": "https://github.com/sadielinks/team-profile-gen#readme",
   "dependencies": {
     "fs": "0.0.1-security",
-    "inquirer": "^8.1.5"
+    "inquirer": "^8.1.5",
+    "lib": "^4.3.3"
   },
   "devDependencies": {
     "jest": "^27.2.4"
