fixed generateTeamHTML to be read

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "fs": "0.0.1-security",
     "inquirer": "^8.1.5",
     "lib": "^4.3.3",
+    "path": "^0.12.7",
     "require": "^2.4.20"
   },
   "devDependencies": {
